syntax = "proto3";

package Pizza;

service PizzaStatus {
  rpc SendStatus (PizzaStatusReport) returns (Ack) {}
}

message PizzaStatusReport {
  int32 OrderId = 1;
  string UserId = 2;
  string StatusText = 3;
}

message Ack {
  string message = 1;
}
